--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Core Dependencies
-numpy>=1.24.0
+numpy>=1.24.0,<2.0.0  # Pin to 1.x for matplotlib compatibility
 pandas>=2.0.0
 matplotlib>=3.7.0
 seaborn>=0.12.0
